--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
+        "php": "^8.2.12",
         "barryvdh/laravel-dompdf": "^3.0",
         "guzzlehttp/guzzle": "^7.9",
         "intervention/image": "^2.7",
@@ -16,7 +16,7 @@
         "spatie/laravel-ignition": "1.6",
         "symfony/http-client": "^7.1",
         "symfony/mailgun-mailer": "^7.1",
-        "twilio/sdk": "*"
+        "twilio/sdk": "^8.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
